# egicli

./: .gitignore  AUTHORS  Dockerfile  README.md  requirements.txt  setup.cfg  tox.ini  travis-deprecated.yml
egicli/: checkin.py  cli.py  endpoint.py
