[metadata]
name = egicli
summary = EGI Command Line Interface 
description-file = 
	README.md
long_description_content_type = text/markdown
author = Enol Fernandez
author-email = enol.fernandez@egi.eu 
home-page = 
classifier = 
	Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Topic :: System :: Monitoring

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[files]
packages = 
    egicli	

[entry_points]
console_scripts = 
	egicli = egicli.cli:cli

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0
